// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mk-env command mk-env fails if no flags are set asking for repo 1`] = `
"The following errors occurred:
  [2mMissing required flag environments[22m
[2m  Missing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;

exports[`mk-env command mk-env fails if only env and org is set 1`] = `
"The following error occurred:
  [2mMissing required flag repositories[22m
See more help with --help"
`;

exports[`mk-env command mk-env fails if only env is set 1`] = `
"The following errors occurred:
  [2mMissing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;

exports[`mk-env command mk-env fails if repo name not match 1`] = `"The repository string must only contain numbers leters and dash"`;
